Auto update: show notification when an update is found (#160)
* Create skeleton

* Show Notification if new release is found

* Delete old installer files

* Use Maven project version as app version

* Add missing properties file

* Remove release profile

* Add support for installing mac bundle

* Download asset in background thread